game-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demo-game
  name: demo-game
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-game
  template:
    metadata:
      labels:
        app: demo-game
    spec:
      containers:
      - image: docker.io/maliqpotter09/demo-game-skola:c3f5800
        name: game
        ports:
        - containerPort: 80
