game-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-game
  name: demo-game-service
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-game
