game-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-game-ingress
  labels:
    app: demo-game-app
spec:
  rules:
  - http:
      paths:
      - path: /gameku
        pathType: Prefix
        backend:
          service:
            name: demo-game-service
            port:
              number: 80
